--- a/src/styles/_pdz-theming.scss
+++ b/src/styles/_pdz-theming.scss
@@ -2,65 +2,9 @@
 @use "variables" as *;
 @use "mixins" as *;
 @use "shape" as *;
-@use "typography" as *;
-
-$pdz-shadows: (
-  0: (
-    0px 0px 0px 0px rgba(0, 0, 0, 0.2),
-    0px 0px 0px 0px rgba(0, 0, 0, 0.14),
-    0px 0px 0px 0px rgba(0, 0, 0, 0.12),
-  ),
-  1: (
-    0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12),
-  ),
-  2: (
-    0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 8px 0px rgba(0, 0, 0, 0.12),
-  ),
-  3: (
-    0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 6px 10px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 18px 0px rgba(0, 0, 0, 0.12),
-  ),
-  4: (
-    0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0px 3px 14px 2px rgba(0, 0, 0, 0.12),
-  ),
-  5: (
-    0px 7px 8px -4px rgba(0, 0, 0, 0.2),
-    0px 12px 17px 2px rgba(0, 0, 0, 0.14),
-    0px 5px 22px 4px rgba(0, 0, 0, 0.12),
-  ),
-  "inset-1": (
-    inset 0px 2px 2px -1px rgba(0, 0, 0, 0.2),
-    inset 0px 1px 2px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 4px 0px rgba(0, 0, 0, 0.12),
-  ),
-  "inset-2": (
-    inset 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    inset 0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 8px 0px rgba(0, 0, 0, 0.12),
-  ),
-  "inset-3": (
-    inset 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    inset 0px 6px 10px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 18px 0px rgba(0, 0, 0, 0.12),
-  ),
-  "inset-4": (
-    inset 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    inset 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-    inset 0px 3px 14px 2px rgba(0, 0, 0, 0.12),
-  ),
-  "inset-5": (
-    inset 0px 7px 8px -4px rgba(0, 0, 0, 0.2),
-    inset 0px 12px 17px 2px rgba(0, 0, 0, 0.14),
-    inset 0px 5px 22px 4px rgba(0, 0, 0, 0.12),
-  ),
-);
+@use "layout" as *;
+@use "shadows" as *;
+@use "breakpoints" as *;
 
 :root {
   --pdz-font-fancy: Nasalization RG, sans-serif;
@@ -69,18 +13,19 @@ $pdz-shadows: (
   --pdz-screen-size-medium: $screen-size-medium;
   --pdz-screen-size-large: $screen-size-large;
 
-  @each $level, $shadows in $pdz-shadows {
-    #{"--pdz-level" + $level}: #{$shadows};
+  @each $level, $shadows in $shadows {
+    --pdz-level-#{$level}: #{$shadows};
   }
-
   @each $name, $value in $shape {
     --pdz-shape-#{$name}: #{$value};
+  }
+  @each $name, $value in $spacing {
+    --pdz-space-#{$name}: #{$value};
   }
 }
 
 body {
-  font-family: map.get(map.get($typography, body-medium), font-family);
-  font-size: map.get(map.get($typography, body-medium), font-size);
+  @include apply-typography(body-medium);
   @include apply-theme(map.get(map.get($themes, normal), light));
   @each $theme-name, $variations in $themes {
     @each $variation-name, $palette in $variations {
@@ -89,8 +34,4 @@ body {
       }
     }
   }
-}
-
-@mixin pdz-shadow($level: 1) {
-  box-shadow: var(--pdz-level-#{$level});
 }
